import net.fabricmc.loom.task.prod.ClientProductionRunTask
import net.fabricmc.loom.task.prod.ServerProductionRunTask

plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    splitEnvironmentSourceSets()

    mods {
        emote {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

sourceSets.test {
    compileClasspath += sourceSets.client.output
    runtimeClasspath += sourceSets.client.output
}

repositories {
    mavenCentral()
    maven {
        name = "Nucleoid"
        url = "https://maven.nucleoid.xyz/"
    }

    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    include(implementation("me.lucko:fabric-permissions-api:${fabric_permissions_api_version}"))
    include(implementation("team.unnamed:mocha:3.0.1"))
    include(implementation("org.javassist:javassist:3.30.2-GA"))

    include(implementation("eu.pb4:polymer-common:${polymer_version}"))
    include(implementation("eu.pb4:polymer-resource-pack:${polymer_version}"))
    include(implementation("eu.pb4:polymer-autohost:${polymer_version}"))

    testImplementation platform("org.junit:junit-bom:5.12.2")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }

    from("docs/sample") {
        include "**/*.json"
        into "default-emotes"
    }
}

tasks.register("prodClient", ClientProductionRunTask)
tasks.register("prodServer", ServerProductionRunTask)

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()

    systemProperty "emote.minecraftVersion", project.minecraft_version.toString()
}
jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}

apply from: "gradle/modrinth.gradle"

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
